--- a/index.html
+++ b/index.html
@@ -4,12 +4,67 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Library</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="reset" href="reset.css">
   <script src="app.js"></script>
 </head>
 <body>
-  
+  <header>
+    <h1>Book Library</h1>
+  </header>
+  <main>
+    <div class="container">
+      <figure>
+        <img src="./images/meditations.jpg">
+        <figcaption>
+          <ul>
+            <li class="title">Meditations</li>
+            <li class="author">Marcus Aurelius</li>
+            <li class="publisher">Penguin</li>
+          </ul>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="./images/meditations.jpg">
+        <figcaption>
+          <ul>
+            <li class="title">Meditations</li>
+            <li class="author">Marcus Aurelius</li>
+            <li class="publisher">Penguin</li>
+          </ul>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="./images/meditations.jpg">
+        <figcaption>
+          <ul>
+            <li class="title">Meditations</li>
+            <li class="author">Marcus Aurelius</li>
+            <li class="publisher">Penguin</li>
+          </ul>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="./images/meditations.jpg">
+        <figcaption>
+          <ul>
+            <li class="title">Meditations</li>
+            <li class="author">Marcus Aurelius</li>
+            <li class="publisher">Penguin</li>
+          </ul>
+        </figcaption>
+      </figure>
+    </div>
+    <aside>
+      <div class="sidebar">
+        <button>Add Book</button>
+        <button>Filter</button>
+      </div>
+    </aside>
+  </main>
+  <footer>
+    Copyright @jesussosarollie
+  </footer>
 </body>
 </html>
