working array looping through and displaying.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Library</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="reset" href="reset.css">
-  <script src="app.js"></script>
 </head>
 <body>
   <header>
@@ -15,7 +14,7 @@
   </header>
   <main>
     <div class="container">
-      <figure>
+      <!-- <figure>
         <img src="./images/meditations.jpg">
         <figcaption>
           <ul>
@@ -54,7 +53,7 @@
             <li class="publisher">Penguin</li>
           </ul>
         </figcaption>
-      </figure>
+      </figure> -->
     </div>
     <aside>
       <div class="sidebar">
@@ -68,3 +67,4 @@
   </footer>
 </body>
 </html>
+<script src="app.js"></script>
