new book button.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,8 @@
     <h1>Book Library</h1>
   </header>
   <main>
+    <div class="popUp"></div>
     <div class="container">
-      <!-- <figure>
-        <img src="./images/meditations.jpg">
-        <figcaption>
-          <ul>
-            <li class="title">Meditations</li>
-            <li class="author">Marcus Aurelius</li>
-            <li class="publisher">Penguin</li>
-          </ul>
-        </figcaption>
-      </figure>
       <figure>
         <img src="./images/meditations.jpg">
         <figcaption>
@@ -35,29 +26,46 @@
         </figcaption>
       </figure>
       <figure>
-        <img src="./images/meditations.jpg">
+        <img src="./images/los-conjurados.jpg">
         <figcaption>
           <ul>
-            <li class="title">Meditations</li>
-            <li class="author">Marcus Aurelius</li>
+            <li class="title">Los Conjurados</li>
+            <li class="author">Jorge Luis Borges</li>
             <li class="publisher">Penguin</li>
           </ul>
         </figcaption>
       </figure>
       <figure>
-        <img src="./images/meditations.jpg">
+        <img src="./images/mazerunner.jpg">
         <figcaption>
           <ul>
-            <li class="title">Meditations</li>
-            <li class="author">Marcus Aurelius</li>
-            <li class="publisher">Penguin</li>
+            <li class="title">Maze Runner</li>
+            <li class="author">James Dashner</li>
+            <li class="publisher">Chicken House</li>
           </ul>
         </figcaption>
-      </figure> -->
+      </figure>
+      <figure>
+        <img src="./images/illiad.jpg">
+        <figcaption>
+          <ul>
+            <li class="title">The Iliad</li>
+            <li class="author">Homer</li>
+            <li class="publisher">University of California Press</li>
+          </ul>
+        </figcaption>
+      </figure>
+      <figure>
+        <button class="newButton" onclick="openform()"><i class="fa-solid fa-book-medical"></i></button>
+        <figcaption>
+          <ul>
+            <li>Add New Book</li>
+          </ul>
+        </figcaption>
+      </figure>  
     </div>
     <aside>
       <div class="sidebar">
-        <button>Add Book</button>
         <button>Filter</button>
       </div>
     </aside>
@@ -68,3 +76,4 @@
 </body>
 </html>
 <script src="app.js"></script>
+<script src="https://kit.fontawesome.com/13da04c02e.js" crossorigin="anonymous"></script>
