--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Library</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="reset" href="reset.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <header>
@@ -14,30 +15,38 @@
   </header>
   <main>
     <div class="popUp">
+      <button class="fa-solid fa-xmark" style="color: #ffffff;"></button>
       <form>
         <legend>New Book</legend>
-        <div class="input">
-          <label for="title">Title</label>
-          <input type="text" name="title" id="title_input" required>
-        </div>
-        <div class="input">
-          <label for="author">Author</label>
-          <input type="text" name="author" id="author_input" required>
-        </div>
-        <div class="input">
-          <label for="pages">Number of pages</label>
-          <input type="text" name="pages" id="pages_input">
-        </div>
-        <div class="input">
-          <label for="read_status">Reading status</label><br>
-          <input type="radio" id="queue" name="queue" value="queue">
-          <label for="queue">In queue</label><br>
-          <input type="radio" id="in_progress" name="in_progress" value="in_progress">
-          <label for="in_progress">In progress</label><br>
-          <input type="radio" id="finished" name="finished" value="finished">
-          <label for="finished">Finished</label>
-        </div>
+        <div class="book_details">      
+          <div class="input">
+            <label for="title">Title</label>
+            <input type="text" name="title" id="title_input" required>
+          </div>
+          <div class="input">
+            <label for="author">Author</label>
+            <input type="text" name="author" id="author_input" required>
+          </div>
+          <div class="input">
+            <label for="pages">Number of pages</label>
+            <input type="text" name="pages" id="pages_input">
+          </div>
+          <div class="input">
+            <label for="read_status">Reading status</label><br>
+            <input type="radio" id="pending" name="read" value="pending">
+            <label for="pending">Pending</label><br>
+            <input type="radio" id="in_progress" name="read" value="in_progress">
+            <label for="in_progress">In progress</label><br>
+            <input type="radio" id="finished" name="read" value="finished">
+            <label for="finished">Finished</label>
+          </div>
+          <div class="input">
+            <label for="cover">Book Cover</label>
+            <input type="file" name="cover" id="cover">
+          </div>
+        </div>  
       </form>
+      <button>Add Book</button>
     </div>
     <div class="container">
       <figure>
@@ -46,7 +55,7 @@
           <ul>
             <li class="title">Meditations</li>
             <li class="author">Marcus Aurelius</li>
-            <li class="publisher">Penguin</li>
+            <li class="status_display">Reading (100/251)</li>
           </ul>
         </figcaption>
       </figure>
@@ -56,7 +65,7 @@
           <ul>
             <li class="title">Los Conjurados</li>
             <li class="author">Jorge Luis Borges</li>
-            <li class="publisher">Penguin</li>
+            <li class="status_display">Finished</li>
           </ul>
         </figcaption>
       </figure>
@@ -66,7 +75,7 @@
           <ul>
             <li class="title">Maze Runner</li>
             <li class="author">James Dashner</li>
-            <li class="publisher">Chicken House</li>
+            <li class="status_display">Finished</li>
           </ul>
         </figcaption>
       </figure>
@@ -76,7 +85,7 @@
           <ul>
             <li class="title">The Iliad</li>
             <li class="author">Homer</li>
-            <li class="publisher">University of California Press</li>
+            <li class="status_display">Pending</li>
           </ul>
         </figcaption>
       </figure>
