--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
           </div>
           <div class="input">
             <label for="pages">Number of pages</label>
-            <input type="text" name="pages" id="pages_input">
+            <input type="number" name="pages" id="pages_input">
           </div>
           <div class="input">
             <label for="read_status">Reading status</label><br>
             <input type="radio" id="pending" name="read" value="Pending">
             <label for="pending">Pending</label><br>
             <input type="radio" id="in_progress" name="read" value="In Progress">
-            <label for="in_progress">In progress</label><br>
-            <input type="radio" id="finished" name="read" value="Finished">
+            <label for="in_progress" id="in_progress_label">In progress</label><br>
+            <input type="radio" id="finished" name="read" value="Finished"checked>
             <label for="finished">Finished</label>
           </div>
           <div class="input">
@@ -90,7 +90,7 @@
         </figcaption>
       </figure>
       <figure>
-        <button class="newButton" onclick="openform()"><i class="fa-solid fa-book-medical"></i></button>
+        <button class="newButton" onclick="openForm()"><i class="fa-solid fa-book-medical"></i></button>
         <figcaption>
           <ul>
             <li>Add New Book</li>
