--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="input">
             <label for="cover">Book Cover</label>
-            <input type="file" name="cover" id="cover">
+            <input type="file" name="cover" id="cover" accept="image/png, image/jpeg">
           </div>
         </div>
         <button class="submit">Add Book</button>  
