finish add book feature

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
             <input type="text" name="author" id="author_input" required>
           </div>
           <div class="input">
-            <label for="pages">Pages (Progress/Total)</label>
-            <input type="number" name="pages" id="pages_input" required>
+            <label for="pages">I'm at page</label>
+            <input type="number" name="pages" id="pages_progress_input" required>
+          </div>
+          <div class="input">
+            <label for="pages">Total pages</label>
+            <input type="number" name="pages" id="pages_total_input" required>
           </div>
           <div class="input">
             <label for="read_status">Reading status</label><br>
