add book button to last postion.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <li class="author">Marcus Aurelius</li>
             <li class="status_display">Reading (100/251)</li>
           </ul>
+          <i class="fa-solid fa-trash-can"></i>
         </figcaption>
       </figure>
       <figure>
