delButton hover color and addButton no border.

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <li class="author">Marcus Aurelius</li>
             <li class="status_display">Reading (100/251)</li>
           </ul>
-          <i class="fa-solid fa-trash-can"></i>
         </figcaption>
+        <button class="fa-solid fa-trash-can"></button>
       </figure>
       <figure>
         <img src="./images/los-conjurados.jpg">
@@ -73,6 +73,7 @@
             <li class="status_display">Finished</li>
           </ul>
         </figcaption>
+        <button class="fa-solid fa-trash-can"></button>
       </figure>
       <figure>
         <img src="./images/mazerunner.jpg">
@@ -83,6 +84,7 @@
             <li class="status_display">Finished</li>
           </ul>
         </figcaption>
+        <button class="fa-solid fa-trash-can"></button>
       </figure>
       <figure>
         <img src="./images/illiad.jpg">
@@ -93,8 +95,9 @@
             <li class="status_display">Pending</li>
           </ul>
         </figcaption>
+        <button class="fa-solid fa-trash-can"></button>
       </figure>
-      <figure>
+      <figure class="newButtonFig">
         <button class="newButton" onclick="openForm()"><i class="fa-solid fa-book-medical"></i></button>
         <figcaption>
           <ul>
