add edit button and styling.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
             <li class="status_display">Reading (100/251)</li>
           </ul>
         </figcaption>
-        <button class="fa-solid fa-trash-can"></button>
+        <div class="buttonContainer">
+          <button class="fa-sharp fa-solid fa-pen-to-square"></button>
+          <button class="fa-solid fa-trash-can"></button>
+        </div>
       </figure>
       <figure>
         <img src="./images/los-conjurados.jpg">
@@ -73,7 +76,10 @@
             <li class="status_display">Finished</li>
           </ul>
         </figcaption>
-        <button class="fa-solid fa-trash-can"></button>
+        <div class="buttonContainer">
+          <button class="fa-sharp fa-solid fa-pen-to-square"></button>
+          <button class="fa-solid fa-trash-can"></button>
+        </div>
       </figure>
       <figure>
         <img src="./images/mazerunner.jpg">
@@ -84,7 +90,10 @@
             <li class="status_display">Finished</li>
           </ul>
         </figcaption>
-        <button class="fa-solid fa-trash-can"></button>
+        <div class="buttonContainer">
+          <button class="fa-sharp fa-solid fa-pen-to-square"></button>
+          <button class="fa-solid fa-trash-can"></button>
+        </div>
       </figure>
       <figure>
         <img src="./images/illiad.jpg">
@@ -95,15 +104,20 @@
             <li class="status_display">Pending</li>
           </ul>
         </figcaption>
-        <button class="fa-solid fa-trash-can"></button>
+        <div class="buttonContainer">
+          <button class="fa-sharp fa-solid fa-pen-to-square"></button>
+          <button class="fa-solid fa-trash-can"></button>
+        </div>
       </figure>
       <figure class="newButtonFig">
-        <button class="newButton" onclick="openForm()"><i class="fa-solid fa-book-medical"></i></button>
-        <figcaption>
-          <ul>
-            <li>Add New Book</li>
-          </ul>
-        </figcaption>
+        <button class="newButton" onclick="openForm()">
+          <i class="fa-solid fa-book-medical"></i>
+          <figcaption>
+            <ul>
+              <li>Add New Book</li>
+            </ul>
+          </figcaption>
+        </button>
       </figure>  
     </div>
   </main>
