--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="reset" href="reset.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap" rel="stylesheet">  
 </head>
 <body>
   <header>
@@ -148,7 +151,8 @@
     </div>
   </main>
   <footer>
-    Copyright @jesussosarollie
+    <i class="fa-brands fa-github" style="color: #7575ca;"></i>
+    Copyright 2023 @sosarollie
   </footer>
 </body>
 </html>
