add book template cover.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <ul>
             <li class="title">Meditations</li>
             <li class="author">Marcus Aurelius</li>
-            <li class="status_display">Reading (100/251)</li>
+            <li class="status_display">In Progress (100/251)</li>
           </ul>
         </figcaption>
         <div class="buttonContainer">
