--- a/index.html
+++ b/index.html
@@ -1,160 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Library</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="reset" href="reset.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet"> 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap" rel="stylesheet">  
-</head>
-<body>
-  <header>
-    <h1>Book Library</h1>
-  </header>
-  <main>
-    <div class="popUp" id="add">
-      <button onclick="closeForm()" class="fa-solid fa-xmark" style="color: #ffffff;"></button>
-      <form>
-        <legend>New Book</legend>
-        <div class="book_details">      
-          <div class="input">
-            <label for="title">Title *</label>
-            <input type="text" name="title" id="title_input" required>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Library</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="reset" href="reset.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <h1>Book Library</h1>
+    </header>
+    <main>
+      <div class="popUp" id="add">
+        <button
+          onclick="closeForm()"
+          class="fa-solid fa-xmark"
+          style="color: #ffffff"
+        ></button>
+        <form>
+          <legend>New Book</legend>
+          <div class="book_details">
+            <div class="input">
+              <label for="title">Title *</label>
+              <input type="text" name="title" id="title_input" required />
+            </div>
+            <div class="input">
+              <label for="author">Author *</label>
+              <input type="text" name="author" id="author_input" required />
+            </div>
+            <div class="input">
+              <label for="read_status">Reading status *</label><br />
+              <input type="radio" id="pending" name="read" value="Pending" />
+              <label for="pending">Pending</label><br />
+              <input
+                type="radio"
+                id="in_progress"
+                name="read"
+                value="In Progress"
+              />
+              <label for="in_progress" id="in_progress_label">In progress</label
+              ><br />
+              <input type="radio" id="finished" name="read" value="Finished" />
+              <label for="finished">Finished</label>
+            </div>
+            <div class="input">
+              <label for="pages">I'm at page</label>
+              <input type="number" name="pages" id="pages_progress_input" />
+            </div>
+            <div class="input">
+              <label for="pages">Total pages</label>
+              <input type="number" name="pages" id="pages_total_input" />
+            </div>
+            <div class="input">
+              <label for="cover">Book Cover *</label>
+              <input
+                type="file"
+                name="cover"
+                id="cover"
+                accept="image/png, image/jpeg"
+              />
+            </div>
           </div>
-          <div class="input">
-            <label for="author">Author *</label>
-            <input type="text" name="author" id="author_input" required>
+          <button class="submit">Add Book</button>
+        </form>
+      </div>
+      <div class="popUp" id="editForm">
+        <button
+          onclick="closeEditForm()"
+          class="fa-solid fa-xmark"
+          style="color: #ffffff"
+        ></button>
+        <form>
+          <legend>Edit Book</legend>
+          <div class="book_details">
+            <div class="input">
+              <label for="read_status">Reading status</label><br />
+              <input
+                type="radio"
+                id="pending_edit"
+                name="read_edit"
+                value="Pending"
+              />
+              <label for="pending">Pending</label><br />
+              <input
+                type="radio"
+                id="in_progress_edit"
+                name="read_edit"
+                value="In Progress"
+              />
+              <label for="in_progress" id="in_progress_label_edit"
+                >In progress</label
+              ><br />
+              <input
+                type="radio"
+                id="finished_edit"
+                name="read_edit"
+                value="Finished"
+                checked
+              />
+              <label for="finished">Finished</label>
+            </div>
+            <div class="input">
+              <label for="pages">I'm at page</label>
+              <input
+                type="number"
+                name="pages"
+                id="pages_progress_input_edit"
+                required
+              />
+            </div>
+            <div class="input">
+              <label for="pages">Total pages</label>
+              <input type="number" name="pages" id="pages_total_input_edit" />
+            </div>
           </div>
-          <div class="input">
-            <label for="read_status">Reading status *</label><br>
-            <input type="radio" id="pending" name="read" value="Pending">
-            <label for="pending">Pending</label><br>
-            <input type="radio" id="in_progress" name="read" value="In Progress">
-            <label for="in_progress" id="in_progress_label">In progress</label><br>
-            <input type="radio" id="finished" name="read" value="Finished">
-            <label for="finished">Finished</label>
-          </div>
-          <div class="input">
-            <label for="pages">I'm at page</label>
-            <input type="number" name="pages" id="pages_progress_input">
-          </div>
-          <div class="input">
-            <label for="pages">Total pages</label>
-            <input type="number" name="pages" id="pages_total_input">
-          </div>
-          <div class="input">
-            <label for="cover">Book Cover *</label>
-            <input type="file" name="cover" id="cover" accept="image/png, image/jpeg">
-          </div>
-        </div>
-        <button class="submit">Add Book</button>  
-      </form>
-    </div>
-    <div class="popUp" id="editForm">
-      <button onclick="closeEditForm()" class="fa-solid fa-xmark" style="color: #ffffff;"></button>
-      <form>
-        <legend>Edit Book</legend>
-        <div class="book_details">      
-          <div class="input">
-            <label for="read_status">Reading status</label><br>
-            <input type="radio" id="pending_edit" name="read_edit" value="Pending">
-            <label for="pending">Pending</label><br>
-            <input type="radio" id="in_progress_edit" name="read_edit" value="In Progress">
-            <label for="in_progress" id="in_progress_label_edit">In progress</label><br>
-            <input type="radio" id="finished_edit" name="read_edit" value="Finished"checked>
-            <label for="finished">Finished</label>
-          </div>
-          <div class="input">
-            <label for="pages">I'm at page</label>
-            <input type="number" name="pages" id="pages_progress_input_edit" required>
-          </div>
-          <div class="input">
-            <label for="pages">Total pages</label>
-            <input type="number" name="pages" id="pages_total_input_edit">
-          </div>
-        </div>
-        <button class="edit">Edit Book</button>  
-      </form>
-    </div>
-    <div class="container">
-      <figure>
-        <img src="./images/meditations.jpg">
-        <figcaption>
-          <ul>
-            <li class="title">Meditations</li>
-            <li class="author">Marcus Aurelius</li>
-            <li class="status_display">In Progress (100/251)</li>
-          </ul>
-        </figcaption>
-        <div class="buttonContainer">
-          <button class="fa-sharp fa-solid fa-pen-to-square"></button>
-          <button class="fa-solid fa-trash-can"></button>
-        </div>
-      </figure>
-      <figure>
-        <img src="./images/los-conjurados.jpg">
-        <figcaption>
-          <ul>
-            <li class="title">Los Conjurados</li>
-            <li class="author">Jorge Luis Borges</li>
-            <li class="status_display">Finished</li>
-          </ul>
-        </figcaption>
-        <div class="buttonContainer">
-          <button class="fa-sharp fa-solid fa-pen-to-square"></button>
-          <button class="fa-solid fa-trash-can"></button>
-        </div>
-      </figure>
-      <figure>
-        <img src="./images/mazerunner.jpg">
-        <figcaption>
-          <ul>
-            <li class="title">Maze Runner</li>
-            <li class="author">James Dashner</li>
-            <li class="status_display">Finished</li>
-          </ul>
-        </figcaption>
-        <div class="buttonContainer">
-          <button class="fa-sharp fa-solid fa-pen-to-square"></button>
-          <button class="fa-solid fa-trash-can"></button>
-        </div>
-      </figure>
-      <figure>
-        <img src="./images/illiad.jpg">
-        <figcaption>
-          <ul>
-            <li class="title">The Iliad</li>
-            <li class="author">Homer</li>
-            <li class="status_display">Pending</li>
-          </ul>
-        </figcaption>
-        <div class="buttonContainer">
-          <button class="fa-sharp fa-solid fa-pen-to-square"></button>
-          <button class="fa-solid fa-trash-can"></button>
-        </div>
-      </figure>
-      <figure class="newButtonFig">
-        <button class="newButton" onclick="openForm()">
-          <i class="fa-solid fa-book-medical"></i>
+          <button class="edit">Edit Book</button>
+        </form>
+      </div>
+      <div class="container">
+        <figure>
+          <img src="./images/meditations.jpg" />
           <figcaption>
             <ul>
-              <li>Add New Book</li>
+              <li class="title">Meditations</li>
+              <li class="author">Marcus Aurelius</li>
+              <li class="status_display">In Progress (100/251)</li>
             </ul>
           </figcaption>
-        </button>
-      </figure>  
-    </div>
-  </main>
-  <footer>
-    <i class="fa-brands fa-github" style="color: #7575ca;"></i>
-    Copyright 2023 @sosarollie
-  </footer>
-</body>
+          <div class="buttonContainer">
+            <button class="fa-sharp fa-solid fa-pen-to-square"></button>
+            <button class="fa-solid fa-trash-can"></button>
+          </div>
+        </figure>
+        <figure>
+          <img src="./images/los-conjurados.jpg" />
+          <figcaption>
+            <ul>
+              <li class="title">Los Conjurados</li>
+              <li class="author">Jorge Luis Borges</li>
+              <li class="status_display">Finished</li>
+            </ul>
+          </figcaption>
+          <div class="buttonContainer">
+            <button class="fa-sharp fa-solid fa-pen-to-square"></button>
+            <button class="fa-solid fa-trash-can"></button>
+          </div>
+        </figure>
+        <figure>
+          <img src="./images/mazerunner.jpg" />
+          <figcaption>
+            <ul>
+              <li class="title">Maze Runner</li>
+              <li class="author">James Dashner</li>
+              <li class="status_display">Finished</li>
+            </ul>
+          </figcaption>
+          <div class="buttonContainer">
+            <button class="fa-sharp fa-solid fa-pen-to-square"></button>
+            <button class="fa-solid fa-trash-can"></button>
+          </div>
+        </figure>
+        <figure>
+          <img src="./images/illiad.jpg" />
+          <figcaption>
+            <ul>
+              <li class="title">The Iliad</li>
+              <li class="author">Homer</li>
+              <li class="status_display">Pending</li>
+            </ul>
+          </figcaption>
+          <div class="buttonContainer">
+            <button class="fa-sharp fa-solid fa-pen-to-square"></button>
+            <button class="fa-solid fa-trash-can"></button>
+          </div>
+        </figure>
+        <figure class="newButtonFig">
+          <button class="newButton" onclick="openForm()">
+            <i class="fa-solid fa-book-medical"></i>
+            <figcaption>
+              <ul>
+                <li>Add New Book</li>
+              </ul>
+            </figcaption>
+          </button>
+        </figure>
+      </div>
+    </main>
+    <footer>
+      <i class="fa-brands fa-github" style="color: #7575ca"></i>
+      Copyright 2023 @sosarollie
+    </footer>
+  </body>
 </html>
 <script src="app.js"></script>
-<script src="https://kit.fontawesome.com/13da04c02e.js" crossorigin="anonymous"></script>
+<script
+  src="https://kit.fontawesome.com/13da04c02e.js"
+  crossorigin="anonymous"
+></script>
