--- a/index.html
+++ b/index.html
@@ -34,15 +34,33 @@
           <div class="book_details">
             <div class="input">
               <label for="title">Title *</label>
-              <input type="text" name="title" id="title_input" required />
+              <input
+                type="text"
+                name="title"
+                id="title_input"
+                required
+                minlength="1"
+              />
             </div>
             <div class="input">
               <label for="author">Author *</label>
-              <input type="text" name="author" id="author_input" required />
+              <input
+                type="text"
+                name="author"
+                id="author_input"
+                required
+                minlength="1"
+              />
             </div>
             <div class="input">
-              <label for="read_status">Reading status *</label><br />
-              <input type="radio" id="pending" name="read" value="Pending" />
+              <label for="read_status">Reading status</label><br />
+              <input
+                type="radio"
+                id="pending"
+                name="read"
+                value="Pending"
+                checked
+              />
               <label for="pending">Pending</label><br />
               <input
                 type="radio"
@@ -60,11 +78,16 @@
               <input type="number" name="pages" id="pages_progress_input" />
             </div>
             <div class="input">
-              <label for="pages">Total pages</label>
-              <input type="number" name="pages" id="pages_total_input" />
+              <label for="pages">Total pages *</label>
+              <input
+                type="number"
+                name="pages"
+                id="pages_total_input"
+                required
+              />
             </div>
             <div class="input">
-              <label for="cover">Book Cover *</label>
+              <label for="cover">Book Cover</label>
               <input
                 type="file"
                 name="cover"
